# ros2tcp

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  upload_pypi.sh
.github/workflows/: python-publish.yml
ros_ws/src/srv_cli/: package.xml  setup.cfg  setup.py
ros_ws/src/srv_cli/srv_cli/: srv_server.py
src/ros2tcp/ROS/: __init__.py  bridge.py
src/ros2tcp/TCPsocket/: TCPsocket.py  __init__.py
src/ros2tcp/plugins/: __init__.py  service_plugins.py  srv_client.py  start_server.py
tests/: test_connection.py
